--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
       padding: 20px;
       margin-top: 50px;
     }
+    .social-icons {
+      margin-top: 10px;
+    }
+    .social-icons a {
+      margin: 0 10px;
+      display: inline-block;
+    }
+    .social-icons img {
+      height: 24px;
+      width: 24px;
+    }
   </style>
 </head>
 <body>
@@ -157,6 +168,11 @@
 
   <footer>
     <p>&copy; 2025 Taller Sustentable. Todos los derechos reservados.</p>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/taller.sustentable" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+      </a>
+    </div>
   </footer>
 </body>
 </html>
